# maa

./: .gitignore  CLAUDE.md  NOTES.md  README.md  pyproject.toml
data/: fetch.py
examples/: demo.py
maa/: __init__.py  noise.py  reconstruct.py  simulate.py
tests/: test_simulate.py
