[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "maa"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "imageio",
    "imageio-ffmpeg",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
packages = ["maa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
